cafe-example/mocha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mocha
  namespace: cafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mocha
  template:
    metadata:
      labels:
        app: mocha 
    spec:
      containers:
      - name: mocha
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mocha
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mocha 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mochawokachocachino
  namespace: cafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mochawokachocachino
  template:
    metadata:
      labels:
        app: mochawokachocachino
    spec:
      containers:
      - name: mochawokachocachino
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mochawokachocachino
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mochawokachocachino
