cafe-example/mocha-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mocha-split
  namespace: cafe
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mocha
    backendRefs:
    - name: mocha
      port: 80
      weight: 90
    - name: mochawokachocachino
      port: 80
      weight: 10
